k8s/pyspark-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app-name: pyspark-pi-${NAME_SUFFIX}
  name: pyspark-pi-${NAME_SUFFIX}-ui-ingress
  namespace: ${NAMESPACE}
spec:
  rules:
  - host: ${HOST}
  - http:
      paths:
        - backend:
            service:
              name: pyspark-pi-${NAME_SUFFIX}-ui-svc
              port: 
                number: 4040
          path: /pyspark-${NAME_SUFFIX}(/|$)(.*)
          pathType: ImplementationSpecific
